# h2ox-ai

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DEP_run.py  Dockerfile  Dockerfile-ts  README.md  app.py  batch.py  cloudbuild.yaml  conf-all.yaml  conf.yaml  definitions.py  license.txt  run.py  serve.py  setup.cfg
conf/: conf-extras.yaml  conf-ganga_damodar.yaml  conf-godavari.yaml  conf-kali.yaml  conf-kaveri.yaml  conf-krishna.yaml  conf-mahanadi.yaml  conf-narmada.yaml  conf-penner.yaml  conf-sharavati.yaml  conf-tapi.yaml
data/: basins.geojson
data/interim/: README.md  bhadra_zscore.csv  harangi_zscore.csv  hemavathy_zscore.csv  (+3 more)
docs/: README.md
h2ox/: run.py
models/: README.md  all_edges.json  extras.mar  extras.pt  extras_cfg.json  extras_dummy_item.pkl  extras_preprocessing.json  extras_sites.json  ganga_damodar.mar  ganga_damodar.pt  ganga_damodar_cfg.json  ganga_damodar_dummy_item.pkl  ganga_damodar_preprocessing.json  ganga_damodar_sites.json  godavari.mar  godavari.pt  godavari_cfg.json  godavari_dummy_item.pkl  godavari_preprocessing.json  godavari_sites.json  kali.mar  kali.pt  kali_cfg.json  kali_dummy_item.pkl  kali_preprocessing.json  kali_sites.json  kaveri.mar  kaveri.pt  kaveri_cfg.json  kaveri_dummy_item.pkl  kaveri_preprocessing.json  kaveri_sites.json  krishna.mar  krishna.pt  krishna_cfg.json  krishna_dummy_item.pkl  krishna_preprocessing.json  krishna_sites.json  mahanadi.mar  mahanadi.pt  (+28 more)
notebooks/: 0_Build_Dataset.ipynb  1_get_basins.ipynb  2_check_server.ipynb  README.md  check_chirps.ipynb  check_graph_oblation.ipynb  check_results.ipynb  gnn.ipynb  indira_data.ipynb  make_trn_period_fig.ipynb  plot_preds.ipynb  upstream_basins_unique.ipynb  zip_results.ipynb
tests/: README.md  test.yaml  test_conf.yaml  test_dataset.py  test_dataset_factory.py  test_dataset_utils.py  test_dataunits.py  test_model.py  test_prediction.py  test_train.py
(+52 files in other folders)
